--- a/konto.html
+++ b/konto.html
@@ -195,7 +195,7 @@
         <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
         <a href="index.html#about">O nas</a>
         <a href="index.html#contact">Kontakt</a>
-        <span id="user-greeting-top" class="user-greeting" style="display: none;"></span>
+        <span id="user-greeting" class="user-greeting" style="display: none;"></span>
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
         <button id="logout-button" class="logout-btn" style="margin: 0; padding: 6px 12px;">Wyloguj</button>
       </nav>
