--- a/konto.html
+++ b/konto.html
@@ -321,7 +321,7 @@
       currentUserUid = user.uid;
 
       // Ustawiamy powitanie w nagłówku i przycisk Logout
-      userGreeting.textContent = Witaj, ${user.email};
+      userGreeting.textContent = `Witaj, ${user.email}`;
       userGreeting.style.display = 'inline-block';
       userGreetingTop.textContent = Witaj, ${user.email};
 
