--- a/konto.html
+++ b/konto.html
@@ -323,7 +323,7 @@
       // Ustawiamy powitanie w nagłówku i przycisk Logout
       userGreeting.textContent = `Witaj, ${user.email}`;
       userGreeting.style.display = 'inline-block';
-      userGreetingTop.textContent = Witaj, ${user.email};
+      userGreetingTop.textContent = 'Witaj, ${user.email}';
 
       // Ukrywamy linki Rejestracja/Logowanie
       linkRejestracja.style.display = 'none';
