--- a/index.html
+++ b/index.html
@@ -1,29 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BKRJ Vet - Klinika Weterynaryjna</title>
   <style>
-    .notification {
-      padding: 15px;
-      margin: 0 auto 20px;
-      max-width: 1200px;
-      text-align: center;
-      font-weight: bold;
-      border-radius: 4px;
-      display: none;
-    }
-    .notification.success {
-      background-color: #dff0d8;
-      color: #3c763d;
-      border: 1px solid #d6e9c6;
-    }
-    .notification.error {
-      background-color: #f2dede;
-      color: #a94442;
-      border: 1px solid #ebccd1;
-    }
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -79,21 +60,6 @@
       color: #4CAF50;
       margin-bottom: 10px;
     }
-    .logout-btn {
-      background-color: #d9534f;
-      color: white;
-      border: none;
-      border-radius: 20px;
-      margin-left: 15px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s;
-      padding: 12px 24px;
-      font-size: 16px;
-    }
-    .logout-btn:hover {
-      background-color: #c9302c;
-    }
     footer {
       background: #f4f4f4;
       padding: 20px 0;
@@ -109,19 +75,20 @@
   </style>
 </head>
 <body>
+
   <header>
-    <div id="notification" class="notification"></div>
     <div class="navbar">
       <div class="logo"><h1>BKRJ Vet</h1></div>
-      <nav>
+      <nav id="nav-bar">
+        <!-- Nadajemy id, aby skrypt JS mógł to ukrywać/pokazywać -->
         <a href="index.html">Strona główna</a>
         <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
         <a href="rejestracja.html" id="nav-rejestracja">Rejestracja</a>
         <a href="login.html" id="nav-logowanie">Logowanie</a>
         <a href="#about">O nas</a>
         <a href="#contact">Kontakt</a>
+        <!-- „Moje Konto” zaczynamy od display: none; zostanie pokazane po zalogowaniu -->
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
-        <button id="logout-button" class="logout-btn" style="display: none;">Wyloguj</button>
       </nav>
     </div>
   </header>
@@ -172,81 +139,54 @@
     </div>
   </footer>
 
-  <!-- Firebase & logika -->
+  <!-- ================================
+       1. Załaduj moduły Firebase (wersja 9+) z CDN
+       2. Dodaj kod JS, który przy starcie strony sprawdzi,
+          czy jest zalogowany użytkownik, i odpowiednio zmodyfikuje menu
+       ================================= -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-    import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
 
+    // ------------------------------------------------------------
+    // 1. Twoja konfiguracja Firebase – wklej dokładnie ten blok
+    // ------------------------------------------------------------
     const firebaseConfig = {
       apiKey: "AIzaSyCZoVVfUPSyS7zELBqEsLNYuVdBqfSq-BE",
       authDomain: "bkrj-vet.firebaseapp.com",
       projectId: "bkrj-vet",
-      storageBucket: "bkrj-vet.appspot.com",
+      storageBucket: "bkrj-vet.firebasestorage.app",
       messagingSenderId: "289704325759",
       appId: "1:289704325759:web:844ebae6cff71bbf40854a",
       measurementId: "G-EH0EC8NKXC"
     };
-
-    const app = initializeApp(firebaseConfig);
+    // Inicjalizacja Firebase
+    const app  = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    const linkRejestracja = document.getElementById('nav-rejestracja');
-    const linkLogowanie = document.getElementById('nav-logowanie');
-    const linkKonto = document.getElementById('nav-konto');
-    const logoutButton = document.getElementById('logout-button');
-
+    // ------------------------------------------------------------
+    // 2. Funkcja, która w zależności od stanu zalogowania
+    //    pokazuje/ukrywa odpowiednie elementy nawigacji
+    // ------------------------------------------------------------
     onAuthStateChanged(auth, (user) => {
+      const linkRejestracja = document.getElementById('nav-rejestracja');
+      const linkLogowanie   = document.getElementById('nav-logowanie');
+      const linkKonto       = document.getElementById('nav-konto');
+
       if (user) {
-        // Pokazujemy przyciski dla zalogowanego
+        // Użytkownik zalogowany → ukrywamy Rejestrację i Logowanie
         linkRejestracja.style.display = 'none';
-        linkLogowanie.style.display = 'none';
+        linkLogowanie.style.display   = 'none';
+        // Pokaż „Moje Konto”
         linkKonto.style.display = 'inline-block';
-        logoutButton.style.display = 'inline-block';
-
-        // Przekazanie danych do sessionStorage
-        sessionStorage.setItem("uid", user.uid);
-        sessionStorage.setItem("email", user.email);
       } else {
+        // Użytkownik wylogowany → pokazujemy Rejestrację i Logowanie
         linkRejestracja.style.display = 'inline-block';
-        linkLogowanie.style.display = 'inline-block';
+        linkLogowanie.style.display   = 'inline-block';
+        // Ukrywamy „Moje Konto”
         linkKonto.style.display = 'none';
-        logoutButton.style.display = 'none';
-        sessionStorage.clear();
       }
     });
-
-    logoutButton.addEventListener('click', async () => {
-      try {
-        await signOut(auth);
-        window.location.href = "index.html?notification=Zostałeś+pomyślnie+wylogowany!&isError=false";
-      } catch (error) {
-        window.location.href = "index.html?notification=Błąd+podczas+wylogowania&isError=true";
-      }
-    });
-
-    // Wyświetlanie powiadomień
-    function showNotification() {
-      const urlParams = new URLSearchParams(window.location.search);
-      const notificationText = urlParams.get('notification');
-      const isError = urlParams.get('isError') === 'true';
-
-      if (notificationText) {
-        const notificationDiv = document.getElementById('notification');
-        notificationDiv.textContent = decodeURIComponent(notificationText.replace(/\+/g, ' '));
-        notificationDiv.className = isError ? 'notification error' : 'notification success';
-        notificationDiv.style.display = 'block';
-
-        setTimeout(() => {
-          notificationDiv.style.display = 'none';
-          const url = new URL(window.location.href);
-          url.searchParams.delete('notification');
-          url.searchParams.delete('isError');
-          window.history.replaceState({}, '', url);
-        }, 3000);
-      }
-    }
-
-    document.addEventListener('DOMContentLoaded', showNotification);
   </script>
 </body>
 </html>
