--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -162,8 +162,8 @@
         <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
         <a href="rejestracja.html" id="nav-rejestracja">Rejestracja</a>
         <a href="login.html" id="nav-logowanie">Logowanie</a>
-        <a href="index.html#about">O nas</a>
-        <a href="index.html#contact">Kontakt</a>
+        <a href="#about">O nas</a>
+        <a href="#contact">Kontakt</a>
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
       </nav>
     </div>
