--- a/konto.html
+++ b/konto.html
@@ -161,8 +161,8 @@
       <nav id="nav-bar">
         <a href="index.html">Strona główna</a>
         <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
-        <a href="rejestracja.html" id="nav-rejestracja">Rejestracja</a>
-        <a href="login.html" id="nav-logowanie">Logowanie</a>
+<!--         <a href="rejestracja.html" id="nav-rejestracja">Rejestracja</a>
+        <a href="login.html" id="nav-logowanie">Logowanie</a> -->
         <a href="#about">O nas</a>
         <a href="#contact">Kontakt</a>
         <span id="user-greeting" class="user-greeting" style="display: none;"></span>
