--- a/konto.html
+++ b/konto.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Moje Konto | BKRJ Vet</title>
   <style>
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #45a049;
+    }
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -167,6 +180,7 @@
         <a href="index#contact">Kontakt</a>
         <span id="user-greeting" class="user-greeting" style="display: none;"></span>
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
+        <button id="logout-button" class="logout-btn" style="margin: 0; padding: 6px 12px;">Wyloguj</button>
       </nav>
     </div>
   </header>
