--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
     .logout-btn:hover {
       background-color: #c9302c;
     }
+      button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #45a049;
+    }
     footer {
       background: #f4f4f4;
       padding: 20px 0;
