--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <a href="#contact">Kontakt</a>
         <!-- „Moje Konto” zaczynamy od display: none; zostanie pokazane po zalogowaniu -->
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
-        <button id="logout-button" class="logout-btn" style="margin: 0; padding: 6px 12px;">Wyloguj</button>
+        <button id="logout-button" class="logout-btn">Wyloguj</button>
       </nav>
     </div>
   </header>
