--- a/konto.html
+++ b/konto.html
@@ -168,7 +168,7 @@
         <a href="index#contact">Kontakt</a>
         <span id="user-greeting" class="user-greeting" style="display: none;"></span>
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
-        <button id="logout-button" class="logout-btn" style="margin: 0; padding: 6px 12px;">Wyloguj</button>
+        <button id="logout-button" class="logout-btn">Wyloguj</button>
       </nav>
     </div>
   </header>
