--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BKRJ Vet - Klinika Weterynaryjna</title>
   <style>
+    button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background: #45a049;
+}
+
+/* Specyficzny styl dla przycisku wylogowania */
+.logout-btn {
+  background: #d9534f;
+  padding: 12px 20px;
+  border-radius: 8px;
+  margin-left: 10px;
+}
+
+.logout-btn:hover {
+  background: #c9302c;
+}
     .notification {
   padding: 15px;
   margin: 0 auto;
@@ -82,45 +109,7 @@
       margin-bottom: 10px;
     }
 
-        button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background: #4CAF50;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-   button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background: #4CAF50; /* Zielony domyślnie */
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-/* Styl czerwonego przycisku wylogowania */
-.logout-btn {
-  background-color: #d9534f !important; /* Czerwony */
-  color: white;
-  border: none;
-  border-radius: 20px;
-  margin-left: 15px;
-  cursor: pointer;
-  font-weight: bold;
-  transition: background-color 0.3s;
-  padding: 12px 24px;
-  font-size: 16px;
-}
-
-/* Ciemniejszy czerwony przy najechaniu */
-.logout-btn:hover {
-  background-color: #c9302c !important;
-}
+  
     footer {
       background: #f4f4f4;
       padding: 20px 0;
