--- a/rejestracja.html
+++ b/rejestracja.html
@@ -172,6 +172,7 @@
           created:  new Date().toISOString()
         });
 
+        window.location.href = 'index.html';
         // c) Jeśli wszystko się udało, pokaż komunikat o sukcesie
         successMessage.textContent = "Rejestracja powiodła się! Możesz się teraz zalogować.";
         successMessage.style.display = 'block';
